2008-01-30  Aaron Bockover  <abock@gnome.org>

	* build/build.rules.mk: Fixed installation. Yay.

2008-01-30  Ruben Vermeersch  <ruben@savanne.be>

	Add the basic files for the Audioscrobbler plugin. Nothing functional yet,
	just the boilerplate code for the addin.

	* build/build.environment.mk: Add refs for Audioscrobbler.

	* configure.ac: Add the Audioscrobbler Makefile.

	* src/Extensions/Banshee.Audioscrobbler: Added.
	* src/Extensions/Banshee.Audioscrobbler/Banshee.Audioscrobbler: Added.
	* src/Extensions/Banshee.Audioscrobbler/Banshee.Audioscrobbler/AudioscrobblerService.cs: Added.
	* src/Extensions/Banshee.Audioscrobbler/Makefile.am: Added.
	* src/Extensions/Banshee.Audioscrobbler/Resources: Added.
	* src/Extensions/Banshee.Audioscrobbler/Resources/Banshee.Audioscrobbler.addin.xml: Added.

	* src/Extensions/Makefile.am: Add Audioscrobbler.

2008-01-29  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceRowRenderer.cs:
	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView.cs: 
	Fix a few minor rendering issues

2008-01-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/BansheeActionGroup.cs: New Add
	method that takes params ActionEntry [] and sets all the created Actions
	as IsImportant=true so if they are used in the toolbar their text will
	appear.

	* src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue/PlayQueueSource.cs:
	Use new Add(params ActionEntry []) override to add actions.

	* src/Core/Nereid/Nereid/PlayerInterface.cs: Set the toolbar style to
	BothHoriz.

	* src/Core/Banshee.ThickClient/Banshee.Gui/ViewActions.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackActions.cs: Inherit
	from BansheeActionGroup.

2008-01-29  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceRowRenderer.cs:
	Draw the same cairo selections that the track list view uses, overriding
	the crappy GTK selection for the tree view
